--- a/.github/workflows/components_instructor_embedders.yml
+++ b/.github/workflows/components_instructor_embedders.yml
@@ -34,6 +34,10 @@ jobs:
       run: |
         pip install -e .[dev]
 
-    - name: Run tests
+    - name: Run unit tests
       run: |
-        pytest
+        pytest -v -m unit
+
+    - name: Run integration tests
+      run: |
+        pytest -v -m integration   
