--- a/components/instructor-embedders/pyproject.toml
+++ b/components/instructor-embedders/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
   # Commenting some of them to not interfere with the dependencies of Haystack.
   #"transformers==4.20.0",
   "datasets>=2.2.0",
-  "pyarrow",
+  #"pyarrow==8.0.0",
   "jsonlines",
   "numpy",
   "requests>=2.26.0",
