--- a/.github/workflows/document_stores_chroma.yml
+++ b/.github/workflows/document_stores_chroma.yml
@@ -36,6 +36,7 @@ jobs:
     steps:
     - name: Support longpaths
       if: matrix.os == 'windows-latest'
+      working-directory: document_stores\chroma
       run: git config --system core.longpaths true
 
     - uses: actions/checkout@v3
