--- a/.github/workflows/document_stores_chroma.yml
+++ b/.github/workflows/document_stores_chroma.yml
@@ -1,12 +1,19 @@
 # This workflow comes from https://github.com/ofek/hatch-mypyc
 # https://github.com/ofek/hatch-mypyc/blob/5a198c0ba8660494d02716cfc9d79ce4adfb1442/.github/workflows/test.yml
-name: test
+name: Test / Document Stores / chroma
 
 on:
   push:
     branches:
     - main
   pull_request:
+    paths:
+      - 'document_stores/chroma/**'
+      - '.github/workflows/document_stores_chroma.yml'
+
+defaults:
+  run:
+    working-directory: document_stores/chroma
 
 concurrency:
   group: test-${{ github.head_ref }}
@@ -29,6 +36,7 @@ jobs:
     steps:
     - name: Support longpaths
       if: matrix.os == 'windows-latest'
+      working-directory: .
       run: git config --system core.longpaths true
 
     - uses: actions/checkout@v3
