Add missing dependency

--- a/document_stores/elasticsearch/pyproject.toml
+++ b/document_stores/elasticsearch/pyproject.toml
@@ -26,7 +26,8 @@ classifiers = [
 dependencies = [
   # we distribute the preview version of Haystack 2.0 under the package "haystack-ai"
   "haystack-ai",
-  "elasticsearch>=8,<9"
+  "elasticsearch>=8,<9",
+  "typing_extensions", # This is not a direct dependency, but `haystack-ai` is missing it cause `canals` is missing it
 ]
 
 [project.urls]
