--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,8 +1,10 @@
 # Integrations
-integration:instructor-embedders-haystack:
+integration:instructor-embedders:
 - components/instructor-embedders/**/*
-integration:chroma-haystack:
+integration:chroma:
 - document_stores/chroma/**/*
+integration:elasticsearch:
+- document_stores/elasticsearch/**/*
 # Topics
 topic:CI:
 - .github/*
