--- a/.github/workflows/document_stores_chroma.yml
+++ b/.github/workflows/document_stores_chroma.yml
@@ -3,9 +3,8 @@
 name: Test / Document Stores / chroma
 
 on:
-  push:
-    branches:
-    - main
+  schedule:
+    - cron: "0 0 * * *"
   pull_request:
     paths:
       - 'document_stores/chroma/**'
