--- a/.github/workflows/document_stores_elasticsearch.yml
+++ b/.github/workflows/document_stores_elasticsearch.yml
@@ -3,9 +3,8 @@
 name: Test / document_stores / elasticsearch
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 0 * * *"
   pull_request:
     paths:
       - "document_stores/elasticsearch/**"
