--- a/.github/workflows/nodes_text2speech.yml
+++ b/.github/workflows/nodes_text2speech.yml
@@ -1,9 +1,8 @@
 name: Test / text2speech
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 0 * * *"
   pull_request:
     paths:
       - 'nodes/text2speech/**'
