pin haystack-ai

--- a/document_stores/chroma/pyproject.toml
+++ b/document_stores/chroma/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "haystack-ai",
+  "haystack-ai<0.144.0",
   "chromadb",
 ]
 
