Update requirements.txt and pyproject.toml with haystack versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,11 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
+  # Uncomment the haystack version required
   # we distribute the preview version of Haystack 2.0 under the package "haystack-ai"
-  "haystack-ai",
+  # "haystack-ai",
+  # and Haystack 1.x is distributed under farm-haystack.
+  # "farm-haystack==1.21.1",
   "typing_extensions",
 ]
 
