--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,29 +1,38 @@
 # Integrations
 integration:chroma:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/chroma/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/chroma/**/*'
 integration:elasticsearch:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/elasticsearch/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/elasticsearch/**/*'
 integration:gradient:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/gradient/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/gradient/**/*'
 integration:instructor-embedders:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/instructor-embedders/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/instructor-embedders/**/*'
 integration:opensearch:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/opensearch/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/opensearch/**/*'
 integration:unstructured-fileconverter:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/unstructured/fileconverter/**/*'
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'integrations/unstructured/fileconverter/**/*'
 # Topics
 topic:CI:
-- changed-files:
-  - any-glob-to-any-file: ['.github/*', '.github/**/*']
+- any:
+  - changed-files:
+    - any-glob-to-any-file: ['.github/*', '.github/**/*']
 topic:DX:
-- changed-files:
-  - any-glob-to-any-file: ['CONTRIBUTING.md', '.pre-commit-config.yaml', '.gitignore', 'requirements.txt']
+- any:
+  - changed-files:
+    - any-glob-to-any-file: ['CONTRIBUTING.md', '.pre-commit-config.yaml', '.gitignore', 'requirements.txt']
 topic:security:
-- changed-files:
-  - any-glob-to-any-file: ['SECURITY.md']
+- any:
+  - changed-files:
+    - any-glob-to-any-file: ['SECURITY.md']
