[cohere] Add text and document embedders (#80)
* Add text and document embedders

------

Co-authored-by: vrunm <97465624+vrunm@users.noreply.github.com>

* refactoring

* linting

* add pytest markers

* more

* fix api url management

* fix integration tests

* fix integrations tests for good

* final cleanup

* review feedback

---------

Co-authored-by: vrunm <97465624+vrunm@users.noreply.github.com>

--- a/integrations/cohere/pyproject.toml
+++ b/integrations/cohere/pyproject.toml
@@ -97,7 +97,6 @@ select = [
   "E",
   "EM",
   "F",
-  "FBT",
   "I",
   "ICN",
   "ISC",
@@ -118,8 +117,6 @@ select = [
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
-  # Allow boolean positional values in function calls, like `dict.get(... True)`
-  "FBT003",
   # Ignore checks for possible passwords
   "S105", "S106", "S107",
   # Ignore complexity
@@ -163,6 +160,16 @@ exclude_lines = [
 module = [
   "cohere.*",
   "haystack.*",
-  "pytest.*"
+  "pytest.*",
+  "numpy.*",
 ]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "--strict-markers"
+markers = [
+  "integration: integration tests",
+  "embedders: embedders tests",
+  "generators: generators tests",
+]
+log_cli = true
