try to fix problems with missing imports

--- a/integrations/jina/pyproject.toml
+++ b/integrations/jina/pyproject.toml
@@ -152,3 +152,10 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+
+[[tool.mypy.overrides]]
+module = [
+  "haystack.*",
+  "pytest.*"
+]
+ignore_missing_imports = true
