refactor: apply suggestions from code review
Co-authored-by: Stefano Fiorucci <44616784+anakin87@users.noreply.github.com>

--- a/.github/workflows/jina.yml
+++ b/.github/workflows/jina.yml
@@ -15,7 +15,7 @@ defaults:
     working-directory: integrations/jina
 
 concurrency:
-  group: cohere-${{ github.head_ref }}
+  group: jina-${{ github.head_ref }}
   cancel-in-progress: true
 
 env:
