--- a/.github/workflows/instructor_embedders.yml
+++ b/.github/workflows/instructor_embedders.yml
@@ -24,19 +24,11 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Ruff
-      uses: chartboost/ruff-action@v1
-      with:
-        src: integrations/instructor-embedders
+    - name: Install Hatch
+      run: pip install --upgrade hatch
 
-    - name: Install instructor-embedders
-      run: |
-        pip install -e .[dev]
+    - name: Lint
+      run: hatch run lint:all
 
-    - name: Run unit tests
-      run: |
-        pytest -v -m unit
-
-    - name: Run integration tests
-      run: |
-        pytest -v -m integration
+    - name: Run tests
+      run: hatch run cov
