--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,43 +1,53 @@
 # Integrations
 integration:chroma:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/chroma/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/chroma/**/*"
 
 integration:cohere:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/cohere/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/cohere/**/*"
 
 integration:elasticsearch:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/elasticsearch/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/elasticsearch/**/*"
+
+integration:google-vertex:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/google-vertex/**/*"
 
 integration:gradient:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/gradient/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/gradient/**/*"
 
 integration:instructor-embedders:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/instructor-embedders/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/instructor-embedders/**/*"
 
 integration:jina:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/jina/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/jina/**/*"
 
 integration:opensearch:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/opensearch/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/opensearch/**/*"
 
 integration:unstructured-fileconverter:
-- changed-files:
-  - any-glob-to-any-file: 'integrations/unstructured/fileconverter/**/*'
+  - changed-files:
+      - any-glob-to-any-file: "integrations/unstructured/fileconverter/**/*"
 
 # Topics
 topic:CI:
-- changed-files:
-  - any-glob-to-any-file: ['.github/*', '.github/**/*']
+  - changed-files:
+      - any-glob-to-any-file: [".github/*", ".github/**/*"]
 topic:DX:
-- changed-files:
-  - any-glob-to-any-file: ['CONTRIBUTING.md', '.pre-commit-config.yaml', '.gitignore', 'requirements.txt']
+  - changed-files:
+      - any-glob-to-any-file:
+          [
+            "CONTRIBUTING.md",
+            ".pre-commit-config.yaml",
+            ".gitignore",
+            "requirements.txt",
+          ]
 topic:security:
-- changed-files:
-  - any-glob-to-any-file: ['SECURITY.md']
+  - changed-files:
+      - any-glob-to-any-file: ["SECURITY.md"]
