Pin google-cloud-aiplatform version

--- a/integrations/google-vertex/pyproject.toml
+++ b/integrations/google-vertex/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "google-cloud-aiplatform",
+  "google-cloud-aiplatform>=1.38",
 ]
 
 [project.urls]
