--- a/integrations/unstructured/fileconverter/pyproject.toml
+++ b/integrations/unstructured/fileconverter/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
   # we distribute the preview version of Haystack 2.0 under the package "haystack-ai"
   "haystack-ai",
-  "unstructured",
+  "unstructured<0.11.4", #  FIXME: investigate why 0.11.4 broke the tests
 ]
 
 [project.urls]
