--- a/.github/workflows/unstructured_fileconverter.yml
+++ b/.github/workflows/unstructured_fileconverter.yml
@@ -29,7 +29,7 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
     services:
       unstructured-api:
-        image: "quay.io/unstructured-io/unstructured-api:0.0.58"
+        image: "quay.io/unstructured-io/unstructured-api:latest"
         ports:
           - 8000:8000
         options: >-
