ci: add qdrant to the labeller

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -39,6 +39,11 @@ integration:opensearch:
       - any-glob-to-any-file: "integrations/opensearch/**/*"
       - any-glob-to-any-file: ".github/workflows/opensearch.yml"
 
+integration:qdrant:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/qdrant/**/*"
+      - any-glob-to-any-file: ".github/workflows/qdrant.yml"
+
 integration:unstructured-fileconverter:
   - changed-files:
       - any-glob-to-any-file: "integrations/unstructured/fileconverter/**/*"
