proposal for updating the sdk

--- a/integrations/gradient/pyproject.toml
+++ b/integrations/gradient/pyproject.toml
@@ -7,7 +7,7 @@ name = "gradient-haystack"
 dynamic = ["version"]
 description = ''
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 license = "Apache-2.0"
 keywords = []
 authors = [
@@ -26,8 +26,9 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "gradientai",
+  "gradientai>=1.4.0",
 ]
+optional-dependencies = { tqdm = ["tqdm"] }
 
 [project.urls]
 Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/gradient#readme"
