--- a/integrations/gradient/pyproject.toml
+++ b/integrations/gradient/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.8"
 license = "Apache-2.0"
 keywords = []
 authors = [
-  { name = "Mateusz Haligowski", email = "mhaligowski@gmail.com" },
+  { name = "Mateusz Haligowski", email = "contact@gradient.ai" },
+  { name = "Michael Feil", email = "contact@gradient.ai" },
+  { name = "Hayden Wilson", email = "contact@gradient.ai" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
