--- a/integrations/instructor_embedders/pyproject.toml
+++ b/integrations/instructor_embedders/pyproject.toml
@@ -50,17 +50,17 @@ dependencies = [
 dev = ["pytest"]
 
 [project.urls]
-Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/components/instructor-embedders#readme"
+Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/instructor_embedders#readme"
 Issues = "https://github.com/deepset-ai/haystack-core-integrations/issues"
-Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/components/instructor-embedders"
+Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/instructor_embedders"
 
 [tool.hatch.version]
 source = "vcs"
-tag-pattern = 'integrations\/instructor-embedders-v(?P<version>.*)'
+tag-pattern = 'integrations\/instructor_embedders-v(?P<version>.*)'
 
 [tool.hatch.version.raw-options]
 root = "../.."
-git_describe_command = 'git describe --tags --match="integrations/instructor-embedders-v[0-9]*"'
+git_describe_command = 'git describe --tags --match="integrations/instructor_embedders-v[0-9]*"'
 
 [tool.hatch.envs.default]
 dependencies = ["pytest", "pytest-cov"]
